<resources>
    <string name="app_name">LifePointCalculator</string>
    <string name="fifty">50</string>
    <string name="one_hundred">100</string>
    <string name="two_hundred">200</string>
    <string name="five_hundred">500</string>
    <string name="one_thousand">1000</string>
    <string name="two_thousand">2000</string>
    <string name="halve">HALVE</string>
    <string name="custom">Custom</string>
    <string name="clear">CLEAR</string>
    <string name="empty"></string>

    <string name="start_lp">8000</string>

    <string name="one_literal">1</string>
    <string name="two_literal">2</string>
    <string name="three_literal">3</string>
    <string name="four_literal">4</string>
    <string name="five_literal">5</string>
    <string name="six_literal">6</string>
    <string name="seven_literal">7</string>
    <string name="eight_literal">8</string>
    <string name="nine_literal">9</string>
    <string name="double_zero_literal">00</string>
    <string name="zero_literal">0</string>
    <string name="c_literal">C</string>
    
    <string name="player">PLAYER</string>
    <string name="action_lp">ACTION LP</string>
    <string name="total_lp">TOTAL LP</string>
    <string name="time">TIME</string>

    <string name="title_log">Log</string>
    <string name="action_lp_hint">0000</string>

    <string name="snackbar_message_player_one_won">Player 1 has won</string>
    <string name="snackbar_message_player_two_won">Player 2 has won</string>
    <string name="snackbar_action_reset">RESET</string>


    <string name="lifepointcalculator_shared_preference_key">lifepointcalculator_shared_preference_key</string>

</resources>