<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.lucidity.haolu.lifepointcalculator.viewmodel.CumulatedCalculatorViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/ll_cumulated_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:showIn="@layout/fragment_calculator">

        <Button
            android:id="@+id/button_fifty"
            style="@style/Button.Cumulated"
            android:background="@drawable/ripple_effect"
            android:text="@string/fifty"
            android:onClick="@{() -> viewmodel.onNumberClicked(@string/fifty)}"/>

        <Button
            android:id="@+id/button_one_hundred"
            style="@style/Button.Cumulated"
            android:background="@drawable/ripple_effect"
            android:text="@string/one_hundred"
            android:onClick="@{() -> viewmodel.onNumberClicked(@string/one_hundred)}"/>

        <Button
            android:id="@+id/button_two_hundred"
            style="@style/Button.Cumulated"
            android:background="@drawable/ripple_effect"
            android:text="@string/two_hundred"
            android:onClick="@{() -> viewmodel.onNumberClicked(@string/two_hundred)}"/>

        <Button
            android:id="@+id/button_five_hundred"
            style="@style/Button.Cumulated"
            android:background="@drawable/ripple_effect"
            android:text="@string/five_hundred"
            android:onClick="@{() -> viewmodel.onNumberClicked(@string/five_hundred)}"/>

        <Button
            android:id="@+id/button_one_thousand"
            style="@style/Button.Cumulated"
            android:background="@drawable/ripple_effect"
            android:text="@string/one_thousand"
            android:onClick="@{() -> viewmodel.onNumberClicked(@string/one_thousand)}"/>

        <Button
            android:id="@+id/button_two_thousand"
            style="@style/Button.Cumulated"
            android:background="@drawable/ripple_effect"
            android:text="@string/two_thousand"
            android:onClick="@{() -> viewmodel.onNumberClicked(@string/two_thousand)}"/>

        <Button
            android:id="@+id/button_halve"
            style="@style/Button.Cumulated"
            android:background="@drawable/ripple_effect"
            android:text="@string/halve"
            android:onClick="@{() -> viewmodel.onHalveClicked()}"/>

        <Button
            android:id="@+id/button_clear"
            style="@style/Button.Cumulated"
            android:background="@drawable/ripple_effect"
            android:text="@string/clear"
            android:onClick="@{() -> viewmodel.onClearClicked()}"/>

    </LinearLayout>
</layout>